styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");

a {
  text-decoration: none;
}

button {
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

/* Start Header */

header {
  display: flex;
  margin-top: 15px;
  padding: 0px 8%;
  justify-content: space-between;
  align-items: center;
}

.logo-small {
  min-width: 75px;
}

.main-nav {
  display: flex;
  align-items: flex-start;
}

.hamburger-nav {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hamburger-nav div {
  display: flex;
}

.hide {
  display: none;
}

nav a,
.join a {
  padding: 10px;
}

.link-text {
  font-family: Raleway;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  color: #000000;
}

header button {
  background-color: #000000;
  color: #ffffff;
  margin-top: 6px;
  margin-left: 10px;
  padding: 5px 20px;
  border-radius: 15px;
  font-family: Inter;
  font-weight: 500;
  font-size: 17px;
}

@media only screen and (max-width: 1000px) {
  header button {
    display: none;
  }
}

@media only screen and (max-width: 480px) {
  header {
    flex-direction: column;
    align-items: stretch;
  }
  .logo-small,
  .main-nav {
    display: none;
  }
}

@media only screen and (min-width: 480px) {
  .hamburger,
  .hamburger-nav {
    display: none;
  }
}

/* End Header */

/* Start Hero */

.hero-section,
.guide-section,
.market-guide {
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1 {
  margin-top: 15px;
  margin-bottom: 20px;
  font-family: Montserrat;
  font-style: normal;
  font-weight: 300;
  font-size: 70px;
  letter-spacing: 0.05em;
  color: #000000;
}

@media only screen and (max-width: 1000px) {
  h1 {
    margin-top: 35px;
  }
}

.hero-section div {
  display: flex;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 5px;
}

.hero-section h2 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 300;
  font-size: 30px;
  color: #000000;
}

@media only screen and (max-width: 480px) {
  .hero-section h2 {
    font-size: 23px;
  }
}

.hero-section button,
.guide-section button,
.about-section button,
.footer-section button,
.market-guide button {
  background-color: #000000;
  color: #ffffff;
  margin-top: 5px;
  padding: 10px 45px;
  border-radius: 32px;
  font-family: Inter;
  font-weight: 500;
  font-size: 20px;
}

@media only screen and (max-width: 480px) {
  .logo-large {
    display: none;
  }
  h1 {
    margin-top: 120px;
    margin-bottom: 0px;
  }
  .hero-section div {
    margin-top: 0px;
  }
  .hero-section button {
    margin-top: 35px;
  }
}

@media only screen and (max-width: 480px) {
  .hero-section .join {
    margin-top: 10px;
  }
}

/* End Hero*/

/* Start About */

.about-section {
  background-image: url("/big-leaf-separator.svg");
  background-position: 0px -550px;
  min-height: 1150px;
  margin-top: 3%;
  padding-left: 35px;
  padding-right: 35px;
}

.fraktal-mission {
  position: relative;
  margin: 0 auto;
  padding-top: 10%;
  width: 600px;
  top: 210px;
}

.fraktal-mission h2 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  color: #ffffff;
  font-size: 37px;
  text-align: center;
}

.fraktal-mission p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #ffffff;
  font-size: 21px;
  margin-top: 40px;
  line-height: 1.3;
}

.fraktal-icons {
  display: flex;
  justify-content: space-evenly;
  margin-top: 290px;
}

.fraktal-icons div {
  width: 240px;
}

.fraktal-icons h4 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: bold;
  color: #000000;
  text-align: center;
  font-size: 23px;
  margin-top: 35px;
}

.fraktal-icons p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  text-align: center;
  font-size: 18px;
}

.fraktal-icons .access-text {
  margin-top: 45px;
}

.fraktal-icons .support-text {
  margin-top: 17px;
}

.fraktal-icons .grow-text {
  margin-top: 45px;
}

@media only screen and (max-width: 720px) {
  .fraktal-mission {
    top: 400px;
    width: 100%;
  }
  .fraktal-icons {
    display: none;
  }
}

@media only screen and (max-width: 480px) {
  .fraktal-mssion {
    margin-left: 10px;
    margin-right: 10px;
  }
}

.about-button {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

.about-button button {
  margin-top: 250px;
}

@media only screen and (max-width: 720px) {
  .about-button button {
    margin-top: 450px;
  }
}

/* End About */

/* Start Guide */

.guide-section {
  background-image: url("/vectors.svg");
  min-height: 840px;
  padding-left: 35px;
  padding-right: 35px;
}

.guide-section h2,
.market-guide h2 {
  font-family: Raleway;
  font-style: normal;
  font-weight: 400;
  font-size: 40px;
  color: #000000;
  margin-top: 25px;
  margin-bottom: 50px;
  text-align: center;
}

.guide-section h3,
.market-guide h3 {
  font-family: Raleway;
  font-style: normal;
  font-weight: 700;
  font-size: 25px;
  margin-top: 30px;
  margin-bottom: 25px;
  text-align: center;
  justify-content: start;
}

@media only screen and (max-width: 780px) {
  .guide-section h3,
  .market-guide h3 {
    margin-bottom: 2px;
  }
}

@media only screen and (min-width: 1000px) {
  .guide-icons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
  }
}

@media only screen and (max-width: 780px) {
  .guide-icons,
  .guide-icons div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

@media only screen and (max-width: 1000px) {
  #how {
    max-width: 60vw;
  }
}

.guide-icons p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  font-size: 20px;
  text-align: center;
  margin-top: 7px;
  min-height: 100px;
}

@media only screen and (min-width: 1000px) {
  .guide-icons div {
    width: 280px;
    margin-left: 50px;
  }
}

.guide-section button,
.market-guide button {
  margin-top: 10px;
}

/* End Guide */

/* Start Benefits */
.benefits-section {
  margin-top: -200px;
}

.benefits-section.marketing {
  margin-top: 0px;

}

.spacer {
  margin-top:-200px;
}

@media only screen and (min-width: 720px) {
  .benefits-section {
    background-image: url("/side-separator.svg");
    background-position: top -115px right;
    min-height: 1020px;
  }
}

.heading-div {
  width: 650px;
  margin: 0 auto;
  margin-bottom: 24%;
}

@media only screen and (max-width: 720px) {
  .heading-div {
    width: 100%;
    margin-top: 30%;
    margin-bottom: 20%;
    padding-left: 20px;
    padding-right: 20px;
  }
}

.heading-div h2 {
  font-family: Raleway;
  font-style: normal;
  font-weight: 400;
  font-size: 40px;
  color: #000000;
  text-align: center;
  padding-top: 10px;
}

.benefits-section p,
.market-intro p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  font-size: 21px;
  margin-top: 40px;
  line-height: 1.3;
}

.benefits-icon {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-top: 50px;
  margin-left: 11%;
}

.benefits-icon p {
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  font-size: 25px;
  margin-left: 40px;
  width: 40%;
}

@media only screen and (min-width: 480px) {
  .benefits-section {
    padding-top: 100px;
  }
}

@media only screen and (max-width: 480px) {
  .benefits-icon {
    flex-direction: column;
    margin-left: 0px;
  }
  .benefits-icon p {
    margin-top: 40px;
    margin-left: 0px;
    text-align: center;
    width: 75%;
  }
}

/* End Benefits */

/* Start Values */

.values-section {
  padding-left: 50px;
  padding-right: 50px;
}

.eth-div {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 85px;
}

.eth-div p {
  width: 320px;
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  color: #000000;
  font-size: 21px;
  margin-left: 50px;
  line-height: 30px;
}

@media only screen and (max-width: 480px) {
  .eth-div {
    flex-direction: column;
    margin-top: 100px;
  }
  .eth-div p {
    margin-top: 30px;
    margin-left: 0px;
    padding-left: 3px;
    padding-right: 2px;
  }
}

.values-section .join {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 140px;
  margin-bottom: 100px;
}

.values-section h3 {
  font-family: Raleway;
  font-style: normal;
  font-weight: 500;
  font-size: 37px;
  margin-bottom: 25px;
  text-align: center;
}

.values-section h3 a {
  color: #000000;
}

/* End Values */

footer {
  background-image: url("/footer.svg");
  height: 654px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer h4 {
  margin-top: 400px;
  font-family: Raleway;
  font-style: normal;
  font-weight: 500;
  font-size: 30px;
  color: #ffffff;
}

.footer-section button {
  margin-top: 40px;
}

@media only screen and (max-width: 720px) {
  .footer-section h4 {
    font-size: 25px;
  }
}

@media only screen and (max-width: 480px) {
  .footer-section h4 {
    font-size: 30px;
    margin-left: 20px;
    margin-right: 20px;
    text-align: center;
  }
}

/* Marketplace */

.market-hero {
  background-image: url("/big-leaf-separator.svg");
  background-position: 0px -350px;
  min-height: 1550px;
  margin-top: 3%;
  padding-left: 35px;
  padding-right: 35px;
  display: flex;
  justify-content: center;
}

@media only screen and (max-width: 780px) {
  .market-hero {
    min-height: 1400px;
  }
}

.market-heading {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.market-heading h1 {
  margin-top: 15px;
  margin-bottom: 20px;
  font-family: Montserrat;
  font-style: normal;
  font-weight: 300;
  font-size: 70px;
  letter-spacing: 0.05em;
  color: #000000;
  text-align: center;
}

@media only screen and (max-width: 1000px) {
  .market-heading h1 {
    margin-top: 35px;
  }
}

.market-heading {
  width: 650px;
  margin: 0 auto;
  margin-bottom: 24%;
}

.market-heading h2 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 300;
  font-size: 30px;
  color: #fff;
  margin-top: 250px;
}

@media only screen and (max-width: 480px) {
  .market-heading {
    width: 90vw;
  }

  .market-heading h1 {
    font-size: 50px;
    margin-top: 40px;
    margin-bottom: 0px;
  }
  .market-heading h2 {
    font-size: 23px;
  }
}

.market-intro {
  padding-bottom: 200px;
}

@media only screen and (max-width: 780px) {
  .market-intro {
    padding-top: 100px;
    padding-bottom: 100px;
  }
}

